# Authlander

./: .drone.yml  Cargo.toml  Dockerfile  README.md  build.rs
migrations/: V1__initial.sql
src/: env.rs  error.rs  main.rs
src/apis/: google_auth.rs
src/endpoints/: mod.rs
src/endpoints/oauth2/: grant.rs  login.rs  mod.rs
src/endpoints/session/: check.rs  describe.rs  mod.rs
src/endpoints/token/: get.rs  mod.rs
src/endpoints/user/: describe.rs  exists.rs  list.rs  mod.rs  scopes.rs
src/totp/: secret.rs
templates/: redirect.html
